--- a/api/header/models/header.settings.json
+++ b/api/header/models/header.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "headers",
   "info": {
-    "name": "header"
+    "name": "header",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -16,6 +17,9 @@
     },
     "url": {
       "type": "string"
+    },
+    "dropdown": {
+      "type": "boolean"
     }
   }
 }
