thêm API prouducts và thêm ngôn ngữ

--- a/api/address/models/address.settings.json
+++ b/api/address/models/address.settings.json
@@ -2,21 +2,31 @@
   "kind": "collectionType",
   "collectionName": "addresses",
   "info": {
-    "name": "Address"
+    "name": "Address",
+    "description": ""
   },
   "options": {
     "increments": true,
     "timestamps": true,
     "draftAndPublish": true
   },
-  "pluginOptions": {},
+  "pluginOptions": {
+    "i18n": {
+      "localized": true
+    }
+  },
   "attributes": {
     "Address": {
-      "type": "richtext"
+      "type": "richtext",
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "companies": {
-      "collection": "company",
       "via": "addresses",
+      "collection": "company",
       "dominant": true
     }
   }
