--- a/api/banner-bottom/models/banner-bottom.settings.json
+++ b/api/banner-bottom/models/banner-bottom.settings.json
@@ -2,20 +2,35 @@
   "kind": "singleType",
   "collectionName": "banner_bottoms",
   "info": {
-    "name": "bannerBottom"
+    "name": "bannerBottom",
+    "description": ""
   },
   "options": {
     "increments": true,
     "timestamps": true,
     "draftAndPublish": true
   },
-  "pluginOptions": {},
+  "pluginOptions": {
+    "i18n": {
+      "localized": true
+    }
+  },
   "attributes": {
     "title": {
-      "type": "string"
+      "type": "string",
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "url": {
-      "type": "string"
+      "type": "string",
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     }
   }
 }
