--- a/api/our-value/models/our-value.settings.json
+++ b/api/our-value/models/our-value.settings.json
@@ -2,14 +2,19 @@
   "kind": "collectionType",
   "collectionName": "our_values",
   "info": {
-    "name": "Our value"
+    "name": "Our value",
+    "description": ""
   },
   "options": {
     "increments": true,
     "timestamps": true,
     "draftAndPublish": true
   },
-  "pluginOptions": {},
+  "pluginOptions": {
+    "i18n": {
+      "localized": true
+    }
+  },
   "attributes": {
     "icon": {
       "model": "file",
@@ -21,10 +26,19 @@
       ],
       "plugin": "upload",
       "required": false,
-      "pluginOptions": {}
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "decs": {
-      "type": "string"
+      "type": "string",
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     }
   }
 }
