--- a/api/company/models/company.settings.json
+++ b/api/company/models/company.settings.json
@@ -2,17 +2,27 @@
   "kind": "collectionType",
   "collectionName": "companies",
   "info": {
-    "name": "company"
+    "name": "company",
+    "description": ""
   },
   "options": {
     "increments": true,
     "timestamps": true,
     "draftAndPublish": true
   },
-  "pluginOptions": {},
+  "pluginOptions": {
+    "i18n": {
+      "localized": true
+    }
+  },
   "attributes": {
     "Name": {
-      "type": "string"
+      "type": "string",
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "addresses": {
       "via": "companies",
