--- a/api/items-footer/models/items-footer.settings.json
+++ b/api/items-footer/models/items-footer.settings.json
@@ -2,20 +2,35 @@
   "kind": "collectionType",
   "collectionName": "items_footers",
   "info": {
-    "name": "ItemsFooter"
+    "name": "ItemsFooter",
+    "description": ""
   },
   "options": {
     "increments": true,
     "timestamps": true,
     "draftAndPublish": true
   },
-  "pluginOptions": {},
+  "pluginOptions": {
+    "i18n": {
+      "localized": true
+    }
+  },
   "attributes": {
     "title_link": {
-      "type": "string"
+      "type": "string",
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "link": {
-      "type": "string"
+      "type": "string",
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "footers": {
       "via": "items_footers",
