--- a/api/products/models/products.settings.json
+++ b/api/products/models/products.settings.json
@@ -1,8 +1,8 @@
 {
   "kind": "collectionType",
-  "collectionName": "typical_products",
+  "collectionName": "products",
   "info": {
-    "name": "Typical_Product",
+    "name": "Products",
     "description": ""
   },
   "options": {
@@ -16,38 +16,6 @@
     }
   },
   "attributes": {
-    "Image": {
-      "model": "file",
-      "via": "related",
-      "allowedTypes": [
-        "images",
-        "files",
-        "videos"
-      ],
-      "plugin": "upload",
-      "required": false,
-      "pluginOptions": {
-        "i18n": {
-          "localized": true
-        }
-      }
-    },
-    "icon": {
-      "model": "file",
-      "via": "related",
-      "allowedTypes": [
-        "images",
-        "files",
-        "videos"
-      ],
-      "plugin": "upload",
-      "required": false,
-      "pluginOptions": {
-        "i18n": {
-          "localized": true
-        }
-      }
-    },
     "title": {
       "type": "string",
       "pluginOptions": {
@@ -64,6 +32,22 @@
         }
       }
     },
+    "img": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
+    },
     "link": {
       "type": "string",
       "pluginOptions": {
@@ -71,14 +55,6 @@
           "localized": true
         }
       }
-    },
-    "title_button": {
-      "pluginOptions": {
-        "i18n": {
-          "localized": true
-        }
-      },
-      "type": "string"
     }
   }
 }
