--- a/api/trial-vithep-banner/models/trial-vithep-banner.settings.json
+++ b/api/trial-vithep-banner/models/trial-vithep-banner.settings.json
@@ -1,8 +1,8 @@
 {
   "kind": "collectionType",
-  "collectionName": "typical_products",
+  "collectionName": "trial_vithep_banners",
   "info": {
-    "name": "Typical_Product",
+    "name": "Trial Vithep banner",
     "description": ""
   },
   "options": {
@@ -16,23 +16,7 @@
     }
   },
   "attributes": {
-    "Image": {
-      "model": "file",
-      "via": "related",
-      "allowedTypes": [
-        "images",
-        "files",
-        "videos"
-      ],
-      "plugin": "upload",
-      "required": false,
-      "pluginOptions": {
-        "i18n": {
-          "localized": true
-        }
-      }
-    },
-    "icon": {
+    "img": {
       "model": "file",
       "via": "related",
       "allowedTypes": [
@@ -49,15 +33,7 @@
       }
     },
     "title": {
-      "type": "string",
-      "pluginOptions": {
-        "i18n": {
-          "localized": true
-        }
-      }
-    },
-    "decs": {
-      "type": "text",
+      "type": "richtext",
       "pluginOptions": {
         "i18n": {
           "localized": true
@@ -73,12 +49,12 @@
       }
     },
     "title_button": {
+      "type": "string",
       "pluginOptions": {
         "i18n": {
           "localized": true
         }
-      },
-      "type": "string"
+      }
     }
   }
 }
